.archived/kubernetes/servitor/buzz/app/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name buzz
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: si-hive
    gethomepage.dev/name: Buzz
    gethomepage.dev/group: Service
spec:
  hostnames: ["buzz.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: networking-system
  rules:
    - backendRefs:
        - name: *name
          port: 3000
